--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,39 @@
-
-
-/* .img {
-    height: auto;
-    width: 2rem;   
-}
-
-form {
+header{
     color: red;
-    background-color: red;
+    font-family: Alegreya;
+    font-weight: bold;
+    font-size: 2.5rem;
+    margin-inline-start: 15px;
 }
 
-label {
-    color: red;
-    cursor: default;
+body {
+	background-color: grey;
+
 }
 
-.id-409574486 {
-    border-radius: 10px;
-} */
+img {
+	border: 4px solid;
+	padding: 0.25rem;
+	background-color:black;
+	border: 1px solid black;
+	border-radius: 0.25rem;
+	max-width: 100%;
+	height: auto;
+}
+
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 0 4px;
+  }
+
+  /* Create two equal columns that sits next to each other */
+  .column {
+	flex: 50%;
+	padding: 0 4px;
+  }
+
+  .column img {
+	margin-top: 8px;
+	vertical-align: middle;
+  }
