--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,26 @@ img {
     margin: -426px 2px;
     cursor: pointer;
 }
+
+body {
+  text-align: center;
+}
+
+div {
+  display: inline-block;
+}
+
+button {
+  display: inline-block;
+  padding: 10px 20px;
+}
+
+#table {
+  display: block;
+  margin-top: 20px;
+}
+
+th, td {
+  border: 1px solid black;
+  padding: 5px;
+}
